// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`planning-obligation GET /change should render the change planning obligation in support page with "no" radio option checked if planningObligation.hasObligation is false 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change planning obligation in support</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-radios" data-module="govuk-radios">
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="planningObligationRadio" name="planningObligationRadio"
                            type="radio" value="no" checked>
                            <label class="govuk-label govuk-radios__label" for="planningObligationRadio">No</label>
                        </div>
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="planningObligationRadio-2" name="planningObligationRadio"
                            type="radio" value="yes">
                            <label class="govuk-label govuk-radios__label" for="planningObligationRadio-2">Yes</label>
                        </div>
                    </div>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`planning-obligation GET /change should render the change planning obligation in support page with "yes" radio option checked if planningObligation.hasObligation is true 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change planning obligation in support</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-radios" data-module="govuk-radios">
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="planningObligationRadio" name="planningObligationRadio"
                            type="radio" value="no">
                            <label class="govuk-label govuk-radios__label" for="planningObligationRadio">No</label>
                        </div>
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="planningObligationRadio-2" name="planningObligationRadio"
                            type="radio" value="yes" checked>
                            <label class="govuk-label govuk-radios__label" for="planningObligationRadio-2">Yes</label>
                        </div>
                    </div>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`planning-obligation GET /status/change should render the change planning obligation status page with "Finalised" radio option checked if planningObligation.status is "finalised" 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change planning obligation status</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-radios" data-module="govuk-radios">
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="planningObligationStatusRadio"
                            name="planningObligationStatusRadio" type="radio" value="not_started">
                            <label class="govuk-label govuk-radios__label" for="planningObligationStatusRadio">Not yet started</label>
                        </div>
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="planningObligationStatusRadio-2"
                            name="planningObligationStatusRadio" type="radio" value="finalised" checked>
                            <label class="govuk-label govuk-radios__label" for="planningObligationStatusRadio-2">Finalised</label>
                        </div>
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="planningObligationStatusRadio-3"
                            name="planningObligationStatusRadio" type="radio" value="not-applicable">
                            <label class="govuk-label govuk-radios__label" for="planningObligationStatusRadio-3">Not applicable</label>
                        </div>
                    </div>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`planning-obligation GET /status/change should render the change planning obligation status page with "Not applicable" radio option checked if planningObligation.status is null 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change planning obligation status</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-radios" data-module="govuk-radios">
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="planningObligationStatusRadio"
                            name="planningObligationStatusRadio" type="radio" value="not_started">
                            <label class="govuk-label govuk-radios__label" for="planningObligationStatusRadio">Not yet started</label>
                        </div>
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="planningObligationStatusRadio-2"
                            name="planningObligationStatusRadio" type="radio" value="finalised">
                            <label class="govuk-label govuk-radios__label" for="planningObligationStatusRadio-2">Finalised</label>
                        </div>
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="planningObligationStatusRadio-3"
                            name="planningObligationStatusRadio" type="radio" value="not-applicable"
                            checked>
                            <label class="govuk-label govuk-radios__label" for="planningObligationStatusRadio-3">Not applicable</label>
                        </div>
                    </div>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;

exports[`planning-obligation GET /status/change should render the change planning obligation status page with "Not yet started" radio option checked if planningObligation.status is "not_started" 1`] = `
"<main class="govuk-main-wrapper " id="main-content" role="main">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full"><span class="govuk-caption-l govuk-!-margin-bottom-3">Appeal 351062</span>
                    <h1                     class="govuk-heading-l govuk-!-margin-bottom-3">Change planning obligation status</h1>
                </div>
            </div>
            <form method="POST" novalidate="novalidate">
                <div class="govuk-form-group">
                    <div class="govuk-radios" data-module="govuk-radios">
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="planningObligationStatusRadio"
                            name="planningObligationStatusRadio" type="radio" value="not_started" checked>
                            <label class="govuk-label govuk-radios__label" for="planningObligationStatusRadio">Not yet started</label>
                        </div>
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="planningObligationStatusRadio-2"
                            name="planningObligationStatusRadio" type="radio" value="finalised">
                            <label class="govuk-label govuk-radios__label" for="planningObligationStatusRadio-2">Finalised</label>
                        </div>
                        <div class="govuk-radios__item">
                            <input class="govuk-radios__input" id="planningObligationStatusRadio-3"
                            name="planningObligationStatusRadio" type="radio" value="not-applicable">
                            <label class="govuk-label govuk-radios__label" for="planningObligationStatusRadio-3">Not applicable</label>
                        </div>
                    </div>
                </div>
                <button type="submit" class="govuk-button" data-module="govuk-button">Continue</button>
            </form>
        </div>
    </div>
</main>"
`;
